--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,23 @@ header > blockquote{
     padding: .7rem;
     font-size: 1rem;
 }
+.box-input{
+    visibility: hidden;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    right: 0;
+    left: 0;
+    text-align: center;
+    background-color: #034C8C;
+    width: 40rem;
+    height: 235px;
+}
+.box-input > form{
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+}
 #content{
     /*height: 60rem;
     */min-height: 100vh;
